# llm-society-v6

./: .gitignore  README.md  V6_RESULTS.md  pyproject.toml  requirements.txt
configs/: llm_society_rl.yaml
llm_society/: __init__.py  main.py
llm_society/agents/: __init__.py  economic_mixin.py  llm_agent.py  memory_mixin.py  social_mixin.py  spatial_mixin.py
llm_society/asset_generation/: asset_manager.py  point_e_handler.py
llm_society/assets/: __init__.py  point_e_generator.py
llm_society/database/: database_handler.py
llm_society/economics/: banking_system.py  economic_analyzer.py  market_system.py
llm_society/experiments/: __init__.py  experiment_coordinator.py  experiment_types.py  heuristic_policy.py  v1_experiments.py  validation_test.py
llm_society/flame_gpu/: __init__.py  agent_kernels.py  flame_gpu_simulation.py  gpu_memory_manager.py  performance_profiler.py
llm_society/llm/: coordinator.py
llm_society/metrics/: __init__.py  behavioral.py  collector.py  happiness.py
llm_society/monitoring/: __init__.py  logging_config.py  metrics.py
llm_society/rl/: __init__.py  atropos_env.py  gemini_policy.py  groq_policy.py  test_env.py  trainer.py  v5_benchmark.py  v5_policy.py  v5_prompts.py  v6_benchmark.py  v6_policy.py  v6_prompts.py
llm_society/simulation/: society_simulator.py
llm_society/social/: __init__.py  family_system.py
llm_society/utils/: config.py  text_utils.py
training_results_cem/: policy_final.npz  training_20251129_165144.json
training_results_v3/: policy_v3_final.npz  training_v3_20251130_190733.json
